<resources>
  <string name="app_name">Assessment</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="checkbox">By clicking Register you are agreeing to the Terms and Conditions.</string>
  <string name="queryposttext">Post your questions here &amp; get them answered by others</string>
  <string name="next">NEXT</string>
  <string name="post">POST</string>
  <string name="post_query_edittext">Type out your question &amp; your fellow students will soon help you out</string>
  <string name="add_image">ADD IMAGE</string>
  <string name="add_image_or_pdf">ADD IMAGE / PDF</string>
  <string name="subjecttest">COMPUTER ORGANISATION AND ARCHITECTURE 2019 Test Series 1</string>
  <string name="subjecttestpractice">COMPUTER ORGANISATION AND ARCHITECTURE Practice Set 1</string>
  <string name="transition_string">myTransition</string>
  <string name="search_android">Search \"Android\"</string>
  <string name="contact_us">Contact Us</string>
  <string name="finish_activity_contact_us">Finish Activity Contact us</string>
  <string name="submit">SUBMIT</string>
  <string name="contact_and_report_text">contact and report text</string>
  <string name="write_something">write something…</string>
  <string name="no_such_posts_found">No such Posts found.</string>
  <string name="search_quot_algorithm_quot">Search \"Algorithm\"</string>
  <string name="home_menu_button">Home Menu Button</string>
  <string name="user_image">User Image</string>
  <string name="add_a_comment">Add a Comment…</string>
  <string name="image_attachment">Image Attachment</string>
  <string name="enter_old_password">Enter Old Password</string>
  <string name="confirm_old_password">Confirm Old Password</string>
  <string name="enter_new_password">Enter New Password</string>
  <string name="confirm_new_password">Confirm New Password</string>
  <string name="camera_image">Camera Image</string>
  <string name="start_writing_your_tips_and_tricks_with_users">Start writing your tips and tricks with users..</string>
  <string name="toc">TOC</string>
  <string name="dbms">DBMS</string>
  <string name="os">OS</string>
  <string name="coa">COA</string>
  <string name="cn">CN</string>
  <string name="discrete_math">Discrete Math</string>
  <string name="c">C</string>
  <string name="cpp">C++</string>
  <string name="java">Java</string>
  <string name="python">Python</string>
  <string name="android">Android</string>
  <string name="others">Others</string>
  <string name="select_subject">Select Subject:</string>
  <string name="algorithm">Algorithm</string>
  <string name="ds">DS</string>
  <string name="compiler">Compiler</string>
  <string name="digital">Digital</string>
  <string name="go_to_back_screen">Go to Back Screen</string>
  <string name="now">Now</string>
  <string name="username">Username</string>
  <string name="type_a_message">Type a message</string>
  <string name="icon_send">Icon Send</string>

  <string-array name="branches">
    <item>Select Branch</item>
    <item>Computer Science and Engineering</item>
    <item>Electronics and Communication Engineering</item>
    <item>Mechanical Engineering</item>
    <item>Electrical Engineering</item>
    <item>Civil Engineering</item>
    <item>Others</item>
  </string-array>

  <string-array name="semester">
    <item>Select Semester</item>
    <item>1st Semester</item>
    <item>2nd Semester</item>
    <item>3rd Semester</item>
    <item>4th Semester</item>
    <item>5th Semester</item>
    <item>6th Semester</item>
    <item>7th Semester</item>
    <item>8th Semester</item>
  </string-array>

  <string-array name="collegelist">
    <item>Select College</item>
    <item>BIT Sindri</item>
    <item>University College of Engineering &amp; Technology</item>
    <item>Chaibasa Engineering College</item>
    <item>Ramgarh Engineering College</item>
    <item>Dumka Engineering College</item>
    <item>DAV Institute of Engineering &amp; Technology</item>
    <item>Nilai Educational Trust\'s Group of Institutions</item>
    <item>Ramchandra Chandravanshi Institute of Technology</item>
    <item>Ramgovind Institute of Technology</item>
    <item>Gurugovind Singh Educational Society Technical Campus</item>
    <item>RTC Institute of Technology</item>
    <item>B.A. College of Engineering &amp; Technology</item>
    <item>Maryland Institute of Technology &amp; Management</item>
    <item>K.K. College of Engineering &amp; Management</item>
    <item>RVS College of Engineering &amp; Technology</item>
    <item>C.I.T Tatisilwai</item>
    <item>Others</item>
  </string-array>

  <string-array name="university">
    <item>Select University</item>
    <item>Jharkhand University of Technology</item>
    <item>Kolhan University</item>
    <item>Others</item>

  </string-array>


</resources>
