<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ContactUsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/cv_nav_head"
        android:elevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_001_back"
                android:contentDescription="@string/finish_activity_contact_us" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:gravity="center_vertical|left"
                android:text="@string/contact_us"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/tv_btn_post"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/smalldarkgrey"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/submit"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:inputType="textMultiLine"
        android:autofillHints="@string/contact_and_report_text"
        android:buttonTint="@color/verydarkgrey"
        android:hint="@string/write_something"
        android:textSize="14sp"
        android:layout_marginBottom="130dp"
        android:layout_below="@+id/cv_nav_head"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_above="@+id/cv_open_image"
        android:padding="5dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/iv_set_image"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/verydarkgrey"
            android:id="@+id/path_image"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:onClick="addAttachment"
        android:id="@+id/cv_open_image"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_custom_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_photo_camera_black_24dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:text="@string/add_image"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="17sp"
                android:textColor="@color/green"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>