<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:elevation="0dp">

                <LinearLayout
                    android:id="@+id/ll_top_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_search_bar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:focusableInTouchMode="true"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/menuBtn"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_weight="0.13"
                                android:padding="5dp"
                                android:src="@drawable/ic_menu_black_24dp"
                                android:contentDescription="@string/home_menu_button"
                                />

                            <TextView
                                android:id="@+id/etSearch"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.87"
                                android:background="@android:color/transparent"
                                android:gravity="center_vertical"
                                android:hint="@string/search_quot_algorithm_quot"
                                android:maxLines="1"
                                android:drawableStart="@drawable/ic_search_black_24dp"
                                android:transitionName="@string/transition_string"
                                android:onClick="goToSearch"
                                android:paddingStart="25dp"
                                android:paddingEnd="0dp"
                                android:textSize="18sp"
                                android:textColor="@color/darkgrey"/>

                            <androidx.cardview.widget.CardView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_marginEnd="10dp"
                                app:cardCornerRadius="18dp"
                                android:layout_margin="7dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_usernew"
                                    android:id="@+id/userDp"
                                    android:transitionName="@string/transition_string"
                                    android:contentDescription="@string/user_image"
                                    />
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/fragment_container"
                app:layout_anchorGravity="bottom|right|end"
                android:id="@+id/fab_post"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorPrimary"
                app:borderWidth="0dp"
                android:src="@drawable/ic_pencil_edit_button_color_white"
                android:layout_marginBottom="40dp"/>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:foreground="?attr/selectableItemBackground"
            app:menu="@menu/bottom_navigation_menu" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>