<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AnswersDoubtsPostsDoubtsActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar_main" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/swipeRefreshLayout"
            app:layout_constraintBottom_toBottomOf="@+id/swipeRefreshLayout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintVertical_bias="0.0" />
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="7dp"
            android:background="@color/smalldarkgrey"
            tools:layout_editor_absoluteX="0dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_user_image"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_boy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.021"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintVertical_bias="0.642" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:layout_marginStart="12dp"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/add_a_comment"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
                android:autofillHints="@string/add_a_comment"
                android:inputType="text"
                />
            <ImageView
                android:id="@+id/ivAddAttachment"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_paper_clip"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_marginEnd="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:contentDescription="@string/image_attachment"
                />
            <TextView
                android:id="@+id/tv_btn_post_comment"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:paddingEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="5dp"
                android:text="@string/post"
                android:textColor="@color/lightenblue"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>