<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreatePostQueryDoubts">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/cv_nav_head"
        android:elevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_cancel_post"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:paddingLeft="12dp"
                android:paddingTop="17dp"
                android:paddingRight="30dp"
                android:paddingBottom="17dp"
                android:src="@drawable/ic_002_multiply" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_profile_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/ic_boy"
                app:civ_border_color="@color/smalldarkgrey"
                app:civ_border_width="0.5dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kumar Ajay"
                    android:textColor="@color/verydarkgrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Now"
                    android:textColor="@color/smalldarkgrey1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_btn_post"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/smalldarkgrey"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/post"
                android:textSize="20sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/et_post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:buttonTint="@color/verydarkgrey"
        android:hint="@string/post_query_edittext"
        android:textSize="14sp"
        android:layout_marginBottom="130dp"
        android:layout_below="@+id/cv_nav_head"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_above="@+id/cv_open_image"
        android:padding="5dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/iv_set_image"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/verydarkgrey"
            android:id="@+id/path_image"/>
    </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:onClick="openImagePicker"
        android:id="@+id/cv_open_image"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_custom_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_photo_camera_black_24dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:text="@string/add_image"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="17sp"
                android:textColor="@color/green"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>